kubernetes/overlays/lab/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookstore
  labels:
    pod-security.kubernetes.io/enforce: privileged
