kubernetes/overlays/lab/elasticsearch-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
spec:
  volumeClaimTemplates:
    - metadata:
        name: es-storage
      spec:
        storageClassName: vsan-default-storage-policy
