kubernetes/overlays/lab/postgres-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  volumeClaimTemplates:
    - metadata:
        name: postgres-storage
      spec:
        storageClassName: cluster-wld01-01a
